Add locale-aware date and time formatting
Introduced locale-based formatting for dates and times across entities, DTOs, and views to enhance internationalization support. Replaced hardcoded formatting logic with reusable methods using `LocaleContextHolder` and `MessageSource`. Updated templates and services to leverage the new localized formatting.